Habilitando funcionamento offline e efeitos nas paginas

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
   name: github
-  repo: willianjusten/gatsby-course
+  repo: vitorvaf/my-blog
   branch: master
-  site_domain: gatsby-course-will.netlify.com
+  site_domain: vitorabreu.netlify.com
 
 publish_mode: editorial_workflow
 media_folder: "static/assets/img"
