--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "gatsby": "^2.23.10",
     "gatsby-image": "^2.4.8",
     "gatsby-plugin-algolia-search": "^0.5.7",
-    "gatsby-plugin-manifest": "^2.4.13",
+    "gatsby-plugin-manifest": "^2.4.14",
+    "gatsby-plugin-netlify-cms": "^4.3.7",
     "gatsby-plugin-offline": "^3.2.12",
     "gatsby-plugin-react-helmet": "^3.3.5",
     "gatsby-plugin-sharp": "^2.6.13",
+    "gatsby-plugin-sitemap": "^2.4.7",
     "gatsby-plugin-styled-components": "^3.3.6",
     "gatsby-plugin-transition-link": "^1.20.2",
     "gatsby-remark-images": "^3.3.13",
@@ -25,6 +27,7 @@
     "gatsby-transformer-sharp": "^2.5.6",
     "gsap": "^3.3.4",
     "lazysizes": "^5.2.2",
+    "netlify-cms-app": "^2.12.15",
     "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
