--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-instantsearch-dom": "^6.6.0",
+    "sharp": "^0.30.7",
     "styled-components": "^5.1.1",
     "styled-icons": "^10.5.0",
     "styled-media-query": "^2.1.2"
